files/gateway_v1a2_gateway-devtest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devtest
spec:
  selector:
    matchLabels:
      app: devtest
  template:
    metadata:
      labels:
        app: devtest
    spec:
      containers:
      - name: devtest
        image: mccutchen/go-httpbin
      topologySpreadConstraints:
      - topologyKey: kubernetes.io/hostname
        maxSkew: 1
        labelSelector:
          matchLabels:
            app: devtest
        whenUnsatisfiable: ScheduleAnyway
---
kind: Service
apiVersion: v1
metadata:
  name: devtest
spec:
  type: NodePort
  selector:
    app: devtest
  ports:
  - port: 80
    targetPort: 8080
    name: http
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: devtest
spec:
  gatewayClassName: gwdev-http4
  listeners:
  - protocol: HTTP
    port: 80
    name: gwdev-web
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: devtest-1
spec:
  parentRefs:
  - name: devtest
  rules:
  - backendRefs:
    - name: devtest
      port: 8080
